# epam-final-assigment

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 0019fc30dc93_initial.py
app/: main.py
app/api/dependencies/: auth.py
app/api/routes/: auth.py  documents.py  projects.py
app/api/schemas/: from_attributes_true.py
app/api/schemas/dto/: document.py  project.py  project_member.py  user.py
app/api/schemas/response/: document.py  project.py  user.py
app/aws/: s3.py
app/core/: exceptions.py  lifespan.py  security.py  settings.py
app/database/: sql_db.py  valkey.py
app/database/queries/: documents.py  project_member.py  projects.py
app/models/: __init__.py  document.py  project.py  project_member.py  user.py
app/services/auth/: login_service.py  logout_all_service.py  logout_service.py  refresh_service.py  register_service.py
app/services/documents/: append_document_service.py  delete_document_service.py  download_document_service.py  get_project_documents_service.py  update_document_service.py
app/services/projects/: change_role_service.py  create_project_service.py  delete_project_service.py  get_accessible_projects_service.py  get_project_info_service.py  invite_user_service.py  remove_user_from_project_service.py  update_project_service.py
app/services/utils/: file.py  security.py
lambda_function/: lambda_function.py
lambda_function/utils/: image_processor.py  parse_s3_key.py  size_checker.py
tests/integration/: conftest.py
(+10 files in other folders)
