[project]
name = "epam-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.137.2",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
    "types-aioboto3>=15.5.0",
    "types-aiobotocore-s3>=3.7.0",
    "valkey>=6.1.1",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "types-aioboto3-custom",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
per-file-ignores = { "tests/**/*.py" = ["E501"] }
select = ["E", "F", "I", "N"]

[tool.uv.sources]
types-aioboto3-custom = { path = "vendored/types_aioboto3_custom-15.5.0-py3-none-any.whl" }
